# addzero-lib-rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.base.json  xiaoeyu.config.json
apps/dioxus-admin/: Cargo.toml  Dioxus.toml  build.rs
apps/dioxus-admin/assets/: admin.css
apps/dioxus-admin/src/: api.rs  app.rs  dotfiles_catalog.rs  lib.rs  main.rs  server.rs
apps/dioxus-admin/src/admin/: provider.rs
apps/dioxus-admin/src/scenes/: agent_nodes.rs  agents.rs  auth.rs  cli_market.rs  dashboard.rs  knowledge_base.rs  mod.rs  system_management.rs  system_settings.rs
apps/dioxus-admin/src/server/: auth.rs  runtime.rs
apps/dioxus-admin/src/server/migrations/: 0001_agent_runtime.sql  0004_admin_software_catalog.sql
apps/dioxus-admin/src/services/: auth.rs  browser_http.rs  cli_market.rs  logo_storage.rs  package_storage.rs
apps/dotfiles/: Cargo.toml
apps/dotfiles/src/: cli.rs  config.rs  dotfile_links.rs  error.rs  git_sync.rs  init.rs  lib.rs  main.rs  package_manager.rs  platform.rs  settings.rs  status.rs
apps/dotfiles/src/cli/: add_dotfiles_command.rs  command.rs  config_command.rs  init_command.rs  oneclick_command.rs  package_command.rs  package_subcommand.rs  remove_dotfiles_command.rs
apps/dotfiles/src/commands/: add_dotfiles.rs  add_pkg.rs  cat_status.rs  enable_all_sources.rs  git_config.rs  init.rs  init_docker.rs  init_homebrew.rs  init_lazyvim.rs  init_ohmyzsh.rs  kill_port.rs  mod.rs  oneclick.rs  push.rs  remove_dotfiles.rs  repl.rs  rm_pkg.rs  show_port.rs  status.rs  sync.rs
apps/dotfiles/src/commands/config/: cat.rs  mod.rs  set_cloud_url.rs  set_package_manager.rs  set_sync_dir.rs
apps/dotfiles/src/commands/package/: install.rs  mod.rs  search.rs  version.rs
apps/dotfiles/src/oneclick/: confirm.rs  downloads.rs  mod.rs  model.rs  shell.rs
apps/msc-aio/: AGENTS.md  Cargo.toml  Dioxus.toml  build.rs
apps/msc-aio/assets/: admin.css  app-icon.icns
apps/msc-aio/migrations/: 20260502_menu_permission_enhance.sql
apps/msc-aio/src/: app.rs  cli.rs  knowledge_catalog.rs  lib.rs  main.rs  package_catalog.rs  server.rs  state.rs
apps/msc-aio/src/admin/: domains.rs  mod.rs  navigation.rs  provider.rs
apps/msc-aio/src/domains/: agents.rs  chat.rs  cli_market.rs  dashboard.rs  download_station.rs  knowledge_base.rs  mod.rs  note_workspace.rs  software_market.rs  system_management.rs  system_settings.rs
apps/msc-aio/src/scenes/: agent_nodes.rs  agents.rs  asset_chat.rs  auth.rs  chat.rs  dashboard.rs  download_station.rs  files.rs  knowledge_base.rs  mod.rs  system_management.rs  system_settings.rs
apps/msc-aio/src/server/: auth.rs
apps/msc-aio/src/services/: agent_runtime.rs  ai_assets.rs  asset_graph.rs  branding_settings.rs  browser_http.rs  cli_market.rs  in_memory_skills.rs  knowledge_entries.rs  knowledge_graph.rs  logo_storage.rs  minio_files.rs  mod.rs  openai_chat.rs  package_storage.rs  skills.rs  software_catalog.rs  system_management.rs  terminal_sessions.rs
apps/msc-aio/tests/: knowledge_navigation_regression.rs
apps/remote-desktop/: Cargo.toml
apps/remote-desktop/remote-desktop-desktop/: Cargo.toml  Dioxus.toml
apps/remote-desktop/remote-desktop-desktop/src/: main.rs
apps/remote-desktop/remote-desktop-host/: Cargo.toml
apps/remote-desktop/remote-desktop-host/src/: main.rs
apps/remote-desktop/remote-desktop-relay/: Cargo.toml
apps/remote-desktop/remote-desktop-web/: Cargo.toml
apps/remote-desktop/remote-desktop-web/src/: main.rs
crates/addzero-email/: Cargo.toml
crates/addzero-mqtt/: Cargo.toml
crates/addzero-mqtt/tests/: public_api.rs
crates/addzero-music/: Cargo.toml  README.md
crates/addzero-music/src/: lib.rs
crates/addzero-music/tests/: public_api.rs
crates/api/addzero-ai-chat/: Cargo.toml
crates/api/addzero-ai-chat/src/: lib.rs  openai.rs
crates/api/addzero-api-translate/: Cargo.toml
crates/api/addzero-api-translate/src/: lib.rs  memory.rs  model.rs
crates/api/addzero-cli-market-contract/: Cargo.toml
crates/api/addzero-cli-market-contract/src/: lib.rs
crates/api/addzero-creates/: Cargo.toml  README.md
crates/api/addzero-creates/src/: config.rs  http.rs  lib.rs  tests.rs  tianyancha.rs  util.rs
crates/api/addzero-creates/tests/: public_api.rs
crates/api/addzero-temp-mail/: Cargo.toml
crates/api/addzero-temp-mail/src/: lib.rs
crates/api/addzero-temp-mail/tests/: public_api.rs
crates/apps/addzero-lowcode/: Cargo.toml
crates/apps/addzero-lowcode/migrations/: 001_init_lowcode.sql
crates/apps/addzero-lowcode/src/: editor.rs  events.rs  grid.rs  lib.rs  registry.rs  render.rs  repo.rs  router.rs  schema.rs  scripting.rs  state.rs  template.rs
crates/config/addzero-toml/: Cargo.toml
crates/core/addzero-array/: Cargo.toml
crates/core/addzero-array/src/: lib.rs
crates/core/addzero-dict-macros/: Cargo.toml
crates/core/addzero-dict-macros/src/: lib.rs
crates/core/addzero-dict-macros/tests/: public_api.rs
crates/core/addzero-error/: Cargo.toml
crates/core/addzero-error/src/: lib.rs
crates/core/addzero-model/: Cargo.toml
crates/core/addzero-model/src/: lib.rs
crates/core/addzero-reflection/: Cargo.toml
crates/core/addzero-reflection/src/: cache.rs  lib.rs  metainfo.rs
crates/core/addzero-reflection/tests/: public_api.rs
crates/core/addzero-regex/: Cargo.toml
crates/core/addzero-regex/src/: lib.rs
crates/core/addzero-remote-model/: Cargo.toml
crates/core/addzero-remote-model/src/: lib.rs
crates/core/addzero-remote-model/tests/: public_api.rs
crates/data/addzero-agent-runtime-contract/: Cargo.toml
crates/data/addzero-agent-runtime-contract/src/: lib.rs
crates/tool-curl/: Cargo.toml
crates/tool-curl/src/: lib.rs
crates/tool-minio/: Cargo.toml
crates/tool-minio/examples/: live_upload_testaaa.rs
crates/tool-minio/src/: lib.rs
crates/tool-rustfs/: Cargo.toml
crates/tool-rustfs/src/: client.rs  lib.rs  types.rs
crates/tool-rustfs/tests/: blocking_s3.rs  public_api.rs
crates/tool-yml/: Cargo.toml
crates/tool-yml/src/: lib.rs
(+432 files in other folders)
