[workspace]
resolver = "2"
members = [
    "apps/*",
    "crates/api/*",
    "crates/config/*",
    "crates/core/*",
    "crates/data/*",
    "crates/music/*",
    "crates/network/*",
    "crates/runtime/*",
    "crates/storage/*",
    "crates/text/*",
    "crates/ui/*",
]
exclude = []

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["zjarlin"]

[workspace.dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["clock"] }
deunicode = "1.6.2"
hmac = "0.12.1"
lettre = "0.11.19"
md5 = "0.8.0"
log = "0.4.28"
mime_guess = "2.0.5"
pinyin = "0.11.0"
proc-macro2 = "1.0.103"
quick-xml = "0.38.4"
quote = "1.0.41"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
ring = "0.17.14"
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
shlex = "1.3.0"
ssh2 = "0.9.5"
syn = { version = "2.0.108", features = ["full", "parsing"] }
tempfile = "3.23.0"
thiserror = "2.0.17"
toml_edit = { version = "0.22.27", features = ["serde"] }
trybuild = "1.0.112"
zip = "4.6.1"
dioxus = { version = "0.7.5", features = ["router"] }
dioxus-free-icons = { version = "0.10.0", features = ["lucide"] }
anyhow = "1.0.99"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "macros"] }
futures-util = "0.3.31"
quinn = { version = "0.11.9", default-features = false, features = ["runtime-tokio", "rustls"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
