[package]
name = "dotfiles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
serde = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
shlex.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
