[workspace]
resolver = "2"
members = [
    "remote-desktop-desktop",
    "remote-desktop-web",
    "remote-desktop-host",
    "remote-desktop-relay",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["zjarlin"]

[workspace.dependencies]
chrono = { version = "0.4.42", features = ["clock"] }
dioxus = { version = "0.7.5", features = ["router"] }
uuid = { version = "1.23.1", features = ["v4", "serde", "js"] }
tokio = { version = "1.47.1", features = ["full"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
