[package]
name = "addzero-mqtt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rumqttc.workspace = true
rustls = { version = "0.23.37", features = ["ring"] }
thiserror.workspace = true

[lints]
workspace = true
