[package]
name = "tool-minio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
tool-rustfs = { path = "../tool-rustfs" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
