[package]
name = "addzero-minio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
base64.workspace = true
ring.workspace = true
thiserror.workspace = true
addzero-rustfs = { path = "../tool-rustfs" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
