[package]
name = "addzero-rustfs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
hmac.workspace = true
md5.workspace = true
mime_guess.workspace = true
quick-xml.workspace = true
reqwest.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
