[package]
name = "remote-desktop-relay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
addzero-remote-session = { path = "../../../crates/runtime/addzero-remote-session" }
tokio.workspace = true

[lints]
workspace = true
