[package]
name = "addzero-ai-chat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Unified Chat interface for AI/LLM providers (OpenAI, Claude, Gemini)"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tokio.workspace = true

[lints]
workspace = true
