[package]
name = "addzero-toml"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
toml_edit.workspace = true

[dev-dependencies]
tempfile.workspace = true
