[package]
name = "addzero-array"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Array and slice utility extensions"

[dependencies]
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
