[package]
name = "addzero-dict-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
addzero-dict-spec = { path = "../addzero-dict-spec" }
proc-macro2.workspace = true
quote.workspace = true
serde_json.workspace = true
syn.workspace = true

[dev-dependencies]
addzero-dict-spec = { path = "../addzero-dict-spec" }
trybuild.workspace = true

[lints]
workspace = true
