[package]
name = "addzero-error"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Unified error types for the addzero ecosystem"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
