[package]
name = "addzero-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Generic model traits for database entities, pagination, and auditing"

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
