[package]
name = "addzero-regex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Regex utilities with compiled pattern caching and helper functions"

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
