[package]
name = "addzero-agent-runtime-contract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

[lints]
workspace = true
